--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>1.5.1.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.4.0-SNAPSHOT</version>
+        <version>5.4.1.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -269,3 +269,4 @@
         <java-version>1.8</java-version>
     </properties>
 </project>
+
