--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.6.1.RELEASE</version>
+    <version>1.7.0.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.5.1.RELEASE</version>
+        <version>5.6.0.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -175,7 +175,7 @@
 <!--            <scope>runtime</scope> -->
 <!--        </dependency> -->
 <!--        <dependency> -->
-<!--            <groupId>com.oracle.jdbc</groupId> -->
+<!--            <groupId>com.oracle.ojdbc</groupId> -->
 <!--            <artifactId>ojdbc8</artifactId> -->
 <!--            <version>${ojdbc.version}</version> -->
 <!--            <scope>runtime</scope> -->
@@ -186,11 +186,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -248,8 +243,8 @@
         <maven-war-plugin.version>2.5</maven-war-plugin.version>
         <org.codehaus.mojo.build-helper-maven-plugin.version>1.9.1</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.2.5</postgresql.version>
-        <ojdbc.version>18.3</ojdbc.version>
+        <postgresql.version>42.2.9</postgresql.version>
+        <ojdbc.version>19.3.0.0</ojdbc.version>
         <dbunit.version>2.5.4</dbunit.version>
         <spring.test.dbunit.version>1.3.0</spring.test.dbunit.version>
         <!-- == Project Properties == -->
