--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.7.0.RELEASE</version>
+    <version>1.7.2.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.6.0.RELEASE</version>
+        <version>5.6.2.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -90,6 +90,13 @@
                         </archive>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <configuration>
+                        <source>${java-version}</source>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -164,6 +171,7 @@
         <dependency>
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-jstlel</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <!-- == End Tomcat == -->
 
@@ -175,7 +183,7 @@
 <!--            <scope>runtime</scope> -->
 <!--        </dependency> -->
 <!--        <dependency> -->
-<!--            <groupId>com.oracle.ojdbc</groupId> -->
+<!--            <groupId>com.oracle.database.jdbc</groupId> -->
 <!--            <artifactId>ojdbc8</artifactId> -->
 <!--            <version>${ojdbc.version}</version> -->
 <!--            <scope>runtime</scope> -->
@@ -240,7 +248,7 @@
 
     <properties>
         <!-- == Maven Plugin Versions == -->
-        <maven-war-plugin.version>2.5</maven-war-plugin.version>
+        <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
         <org.codehaus.mojo.build-helper-maven-plugin.version>1.9.1</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
         <postgresql.version>42.2.9</postgresql.version>
