--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.8.0.RELEASE</version>
+    <version>1.8.1.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.7.0.RELEASE</version>
+        <version>5.7.1.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -79,7 +79,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>${maven-war-plugin.version}</version>
+                    <version>${org.apache.maven.plugins.maven-war-plugin.version}</version>
                     <configuration>
                         <warName>${project.artifactId}</warName>
                         <archive>
@@ -223,6 +223,11 @@
             <version>${spring.test.dbunit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <scope>test</scope>
+        </dependency>
         -->
 
         <!-- Please set the appropriate version according to the web browser. -->
@@ -247,12 +252,12 @@
 
     <properties>
         <!-- == Maven Plugin Versions == -->
-        <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
+        <org.apache.maven.plugins.maven-war-plugin.version>3.3.1</org.apache.maven.plugins.maven-war-plugin.version>
         <org.codehaus.mojo.build-helper-maven-plugin.version>3.2.0</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.2.9</postgresql.version>
-        <ojdbc.version>19.3.0.0</ojdbc.version>
-        <dbunit.version>2.5.4</dbunit.version>
+        <postgresql.version>42.3.1</postgresql.version>
+        <ojdbc.version>21.3.0.0</ojdbc.version>
+        <dbunit.version>2.7.2</dbunit.version>
         <spring.test.dbunit.version>1.3.0</spring.test.dbunit.version>
         <!-- == Project Properties == -->
         <encoding>UTF-8</encoding>
