--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.8.1.RELEASE</version>
+    <version>1.8.1.SP1.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.7.1.RELEASE</version>
+        <version>5.7.1.SP1.RELEASE</version>
         <relativePath />
     </parent>
 
