--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.8.1.SP1.RELEASE</version>
+    <version>1.8.2.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.7.1.SP1.RELEASE</version>
+        <version>5.7.2.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -255,9 +255,9 @@
         <org.apache.maven.plugins.maven-war-plugin.version>3.3.1</org.apache.maven.plugins.maven-war-plugin.version>
         <org.codehaus.mojo.build-helper-maven-plugin.version>3.2.0</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.3.1</postgresql.version>
-        <ojdbc.version>21.3.0.0</ojdbc.version>
-        <dbunit.version>2.7.2</dbunit.version>
+        <postgresql.version>42.5.1</postgresql.version>
+        <ojdbc.version>21.8.0.0</ojdbc.version>
+        <dbunit.version>2.7.3</dbunit.version>
         <spring.test.dbunit.version>1.3.0</spring.test.dbunit.version>
         <!-- == Project Properties == -->
         <encoding>UTF-8</encoding>
