--- a/parts/JSP/pom.xml
+++ b/parts/JSP/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>xxxxxx.yyyyyy.zzzzzz</groupId>
     <artifactId>projectName</artifactId>
-    <version>1.9.1.RELEASE</version>
+    <version>1.10.0.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.8.1.RELEASE</version>
+        <version>5.9.0.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -47,6 +47,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
+                        <parameters>true</parameters>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.mapstruct</groupId>
@@ -227,6 +228,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
@@ -286,10 +293,11 @@
         <org.apache.maven.plugins.maven-war-plugin.version>3.3.2</org.apache.maven.plugins.maven-war-plugin.version>
         <org.codehaus.mojo.build-helper-maven-plugin.version>3.3.0</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.5.1</postgresql.version>
-        <ojdbc.version>21.8.0.0</ojdbc.version>
+        <postgresql.version>42.7.1</postgresql.version>
+        <ojdbc.version>23.3.0.23.09</ojdbc.version>
         <dbunit.version>2.7.3</dbunit.version>
         <spring.test.dbunit.version>1.3.0</spring.test.dbunit.version>
+        <webdrivermanager.version>5.6.3</webdrivermanager.version>
         <!-- == Project Properties == -->
         <encoding>UTF-8</encoding>
         <java-version>17</java-version>
