--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.macchinetta.blank</groupId>
     <artifactId>macchinetta-web-blank-noorm</artifactId>
-    <version>1.8.3.RELEASE</version>
+    <version>1.8.4.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.7.3.RELEASE</version>
+        <version>5.7.4.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -36,9 +36,9 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:git@github.com:Macchinetta/macchinetta-web-blank.git</connection>
-        <developerConnection>scm:git:git@github.com:Macchinetta/macchinetta-web-blank</developerConnection>
-        <url>git@github.com:Macchinetta/macchinetta-web-blank</url>
+        <connection>scm:git:git://github.com/Macchinetta/macchinetta-web-blank.git</connection>
+        <developerConnection>scm:git:ssh://github.com/Macchinetta/macchinetta-web-blank.git</developerConnection>
+        <url>https://github.com/Macchinetta/macchinetta-web-blank</url>
     </scm>
     <build>
         <pluginManagement>
@@ -175,18 +175,18 @@
         <!-- == End Tomcat == -->
 
         <!-- == Begin Database == -->
-<!--        <dependency> -->
-<!--            <groupId>org.postgresql</groupId> -->
-<!--            <artifactId>postgresql</artifactId> -->
-<!--            <version>${postgresql.version}</version> -->
-<!--            <scope>runtime</scope> -->
-<!--        </dependency> -->
-<!--        <dependency> -->
-<!--            <groupId>com.oracle.database.jdbc</groupId> -->
-<!--            <artifactId>ojdbc8</artifactId> -->
-<!--            <version>${ojdbc.version}</version> -->
-<!--            <scope>runtime</scope> -->
-<!--        </dependency> -->
+        <!--        <dependency> -->
+        <!--            <groupId>org.postgresql</groupId> -->
+        <!--            <artifactId>postgresql</artifactId> -->
+        <!--            <version>${postgresql.version}</version> -->
+        <!--            <scope>runtime</scope> -->
+        <!--        </dependency> -->
+        <!--        <dependency> -->
+        <!--            <groupId>com.oracle.database.jdbc</groupId> -->
+        <!--            <artifactId>ojdbc8</artifactId> -->
+        <!--            <version>${ojdbc.version}</version> -->
+        <!--            <scope>runtime</scope> -->
+        <!--        </dependency> -->
         <!-- == End Database == -->
 
         <!-- == Begin Unit Test == -->
@@ -198,13 +198,11 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>${webdrivermanager.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>${httpclient5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -226,13 +224,11 @@
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
-            <version>${dbunit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
             <artifactId>spring-test-dbunit</artifactId>
-            <version>${spring.test.dbunit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -267,12 +263,8 @@
         <org.apache.maven.plugins.maven-war-plugin.version>3.3.1</org.apache.maven.plugins.maven-war-plugin.version>
         <org.codehaus.mojo.build-helper-maven-plugin.version>3.2.0</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.7.1</postgresql.version>
-        <ojdbc.version>23.3.0.23.09</ojdbc.version>
-        <dbunit.version>2.7.3</dbunit.version>
-        <spring.test.dbunit.version>1.3.0</spring.test.dbunit.version>
-        <webdrivermanager.version>5.6.3</webdrivermanager.version>
-        <httpclient5.version>5.2.3</httpclient5.version>
+        <postgresql.version>42.7.4</postgresql.version>
+        <ojdbc.version>23.6.0.24.10</ojdbc.version>
         <!-- == Project Properties == -->
         <encoding>UTF-8</encoding>
         <java-version>1.8</java-version>
