--- a/parts/JSP/pom.xml
+++ b/parts/JSP/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>xxxxxx.yyyyyy.zzzzzz</groupId>
     <artifactId>projectName</artifactId>
-    <version>1.10.0.RELEASE</version>
+    <version>1.11.0.RELEASE</version>
     <packaging>war</packaging>
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.9.0.RELEASE</version>
+        <version>5.10.0.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -36,11 +36,12 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:git@github.com:Macchinetta/macchinetta-web-blank.git</connection>
-        <developerConnection>scm:git:git@github.com:Macchinetta/macchinetta-web-blank</developerConnection>
-        <url>git@github.com:Macchinetta/macchinetta-web-blank</url>
+        <connection>scm:git:git://github.com/Macchinetta/macchinetta-web-blank.git</connection>
+        <developerConnection>scm:git:ssh://github.com/Macchinetta/macchinetta-web-blank.git</developerConnection>
+        <url>https://github.com/Macchinetta/macchinetta-web-blank</url>
     </scm>
     <build>
+        <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -110,7 +111,6 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>${org.apache.maven.plugins.maven-war-plugin.version}</version>
                     <configuration>
-                        <warName>${project.artifactId}</warName>
                         <archive>
                             <addMavenDescriptor>false</addMavenDescriptor>
                             <manifest>
@@ -207,18 +207,18 @@
         <!-- == End Tomcat == -->
 
         <!-- == Begin Database == -->
-<!--        <dependency> -->
-<!--            <groupId>org.postgresql</groupId> -->
-<!--            <artifactId>postgresql</artifactId> -->
-<!--            <version>${postgresql.version}</version> -->
-<!--            <scope>runtime</scope> -->
-<!--        </dependency> -->
-<!--        <dependency> -->
-<!--            <groupId>com.oracle.database.jdbc</groupId> -->
-<!--            <artifactId>ojdbc11</artifactId> -->
-<!--            <version>${ojdbc.version}</version> -->
-<!--            <scope>runtime</scope> -->
-<!--        </dependency> -->
+        <!--        <dependency> -->
+        <!--            <groupId>org.postgresql</groupId> -->
+        <!--            <artifactId>postgresql</artifactId> -->
+        <!--            <version>${postgresql.version}</version> -->
+        <!--            <scope>runtime</scope> -->
+        <!--        </dependency> -->
+        <!--        <dependency> -->
+        <!--            <groupId>com.oracle.database.jdbc</groupId> -->
+        <!--            <artifactId>ojdbc17</artifactId> -->
+        <!--            <version>${ojdbc.version}</version> -->
+        <!--            <scope>runtime</scope> -->
+        <!--        </dependency> -->
         <!-- == End Database == -->
 
         <!-- == Begin Unit Test == -->
@@ -230,7 +230,6 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>${webdrivermanager.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -252,13 +251,11 @@
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
-            <version>${dbunit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
             <artifactId>spring-test-dbunit</artifactId>
-            <version>${spring.test.dbunit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -290,14 +287,11 @@
 
     <properties>
         <!-- == Maven Plugin Versions == -->
-        <org.apache.maven.plugins.maven-war-plugin.version>3.3.2</org.apache.maven.plugins.maven-war-plugin.version>
-        <org.codehaus.mojo.build-helper-maven-plugin.version>3.3.0</org.codehaus.mojo.build-helper-maven-plugin.version>
+        <org.apache.maven.plugins.maven-war-plugin.version>3.4.0</org.apache.maven.plugins.maven-war-plugin.version>
+        <org.codehaus.mojo.build-helper-maven-plugin.version>3.6.0</org.codehaus.mojo.build-helper-maven-plugin.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.7.1</postgresql.version>
-        <ojdbc.version>23.3.0.23.09</ojdbc.version>
-        <dbunit.version>2.7.3</dbunit.version>
-        <spring.test.dbunit.version>1.3.0</spring.test.dbunit.version>
-        <webdrivermanager.version>5.6.3</webdrivermanager.version>
+        <postgresql.version>42.7.4</postgresql.version>
+        <ojdbc.version>23.6.0.24.10</ojdbc.version>
         <!-- == Project Properties == -->
         <encoding>UTF-8</encoding>
         <java-version>17</java-version>
